<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- COMMON STRINGS -->
    <string name="app_name">Injectable Medicines Guide</string>
    <string name="loading_description">Splash loading image</string>
    <string name="search_hint">Search drugs...</string>
    <string name="action_home">Home</string>
    <string name="action_browse_drugs">Browse drugs</string>
    <string name="action_update">Update database</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit</string>

    <!-- LOGIN ACTIVITY STRINGS -->
    <string name="title_activity_login">Account Login</string>
    <string name="login_message">Login to your account</string>
    <string name="login_explain">Please login using your NHS account, your credentials will be stored for ease of use.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_error_password">Invalid username or password</string>
    <string name="login_error_connection">Connection error</string>
    <string name="login_success_toast">Login successful</string>

    <!-- MAIN ACTIVITY STRINGS -->
    <string name="welcome_text"><![CDATA[
        <b>Welcome to the injectable medicines guide.</b><br/><br/>
        Press the <b>Browse Drugs</b> button below to begin searching for drugs or if you would like
        to only view the drugs that have calculators click the <b>Calculator</b> button.
        ]]></string>
    <string name="last_updated_text"><![CDATA[
        <b>Last database update: %1$s</b><br/><br/>
        It is recommended that you update the drug database regularly (at least once every 3 months), so that you have the most recent
        and correct information.<br/><br/>To update the database press the <b>Update now</b> now button below.
    ]]></string>
    <string name="update_button">Update now</string>
    <string name="view_drugs_button">Browse Drugs</string>
    <string name="title_activity_browse_drugs">Browse drugs</string>
    <string name="about_button">About</string>



    <!-- VIEW DRUG ACTIVITY STRINGS -->
    <string name="title_activity_view_drug">Monograph of %1$s</string>
    <string name="calculator_button">Calculator</string>
    <string name="title_activity_calc_drug_select">Select a drug for the calculator</string>
    <string name="open_calculator">OPEN CALCULATOR:</string>
    <string name="open_calc_button">Open calculator</string>

    <!-- DOWNLOAD ACTIVITY STRINGS -->
    <string name="download_index_success">Downloading drug index information</string>
    <string name="download_calc_success">Downloading drug calculation information</string>
    <string name="download_drug_progress">Downloading (%1$d of %2$d)</string>
    <string name="download_failed_title">Download failed, try again?</string>
    <string name="download_failed_index_message">
        Failed to download drug index.\n\n
        Would you like to try again?
    </string>
    <string name="download_failed_try_again">Try again</string>
    <string name="download_failed_calculator_message">
        Failed to download drug calculation info.\n\n
        Would you like to try again?
    </string>
    <string name="download_failed_drugs_message">
        Failed to download drugs starting with the letters %1$s\n\n
        Would you like to try again?
    </string>
    <string name="download_failed_cancel">Cancel</string>
    <string name="download_failed_login_error">Invalid credentials</string>
    <string name="download_index_failed_toast">Failed downloading index</string>
    <string name="download_index_success_toast">Downloaded drug index</string>
    <string name="download_calc_success_toast">Downloaded calculation</string>
    <string name="download_calcs_failed_toast">Failed downloading calcs</string>
    <string name="download_drugs_failed_toast">Failed downloading %1$s... drugs</string>
    <string name="download_drugs_success_toast">Downloaded %1$s... drugs</string>
    <string name="view_drug_error">Failed to find drug</string>
    <string name="title_activity_download_data">Downloading monographs</string>
    <string name="downloading_header">Drug information is downloading</string>
    <string name="downloading_message">As the drug database is large this may take some time, please wait.</string>
    <string name="service_message">Downloading drug data...</string>


    <!-- CALCULATOR ACTIVITY STRINGS -->
    <string name="title_activity_calculate">Calculator for %1$s</string>
    <string name="calc_dose_from_ir">Dose from Infusion Rate</string>
    <string name="calc_ir_from_dose">Infusion Rate from Dose</string>
    <string name="patient_weight_header">Patient weight (kg)</string>
    <string name="time_header">Time (minutes)</string>
    <string name="concentration_header">Concentration (%1$s)</string>
    <string name="dose_header">Dose (%1$s)</string>
    <string name="infusion_rate_header">Infusion rate (%1$s)</string>
    <string name="calculate_button">Calculate</string>
    <string name="enter_value">Enter a value</string>
    <string name="calculator_explain">Enter in the information below and click calculate to perform calculation.</string>
    <string name="time">60</string>
    <string name="calculator_message_no_type">Error, no calculation type selected</string>
    <string name="calculator_error_dose">Dosage must be greater than 0</string>
    <string name="calculator_error_infusion_rate">Infusion rate must be greater than 0</string>
    <string name="calculator_error_concentration">Concentration must greater than 0</string>
    <string name="calculator_error_time">Time must greater than 0</string>
    <string name="calculator_error_weight">Weight must greater than 0</string>
    <string name="calculator_warn_weight_title">Is the weight (%1$skg) correct?</string>
    <string name="calculator_warn_weight_message">The weight you entered %1$skg seems incorrect. Do you want to continue using this value?</string>
    <string name="calculator_warn_cancel">Cancel</string>
    <string name="calculator_warn_continue">Continue</string>
    <string name="calculator_result_title">Calculation results</string>
    <string name="calculator_result_ok">OK</string>
    <string-array name="calculation_types">
        <item>@string/calc_dose_from_ir</item>
        <item>@string/calc_ir_from_dose</item>
    </string-array>
        <string name="display_calculation_html">
        <![CDATA[
            <!DOCTYPE html>
            <html>
            <head>
                <style type="text/css">
                    body{
                        margin-left: 0.5em;
                        margin-right: 0.5em;
                    }
                    #equationFirst{
                        display: inline-block;
                        white-space: nowrap;
                        clear: both;
                        float: left;
                        margin-bottom: 2em;
                        text-align: center;
                        font-size: 0.8em;
                    }
                    #equationSecond{
                        display: inline-block;
                        white-space: nowrap;
                        clear: both;
                        float: left;
                        margin-bottom: 1em;
                        text-align: center;
                    }
                    #small{
                        font-size: 0.8em;
                    }
                    .top{
                        padding-bottom:0.5em;
                    }
                    .bottom{
                        border-top:#000 1px solid;
                        padding-top:0.5em;
                    }
                    h2{
                        margin-top: 0;
                        float: left;
                        clear: both;
                        white-space: nowrap;
                    }
                    h3{
                        float: left;
                        clear: both;
                        white-space: nowrap;
                    }
                </style>
            </head>
            <body>
            <h2>%1$s</h2>
            <div id="equationFirst">
                <div class="top">= %2$s</div>
                <div class="bottom">%3$s</div>
            </div>

            <div id="equationSecond">
                <div class="top">= %4$s</div>
                <div class="bottom">%5$s</div>
            </div><br/>

            <h3> = %6$s</h3><br/>
            </body></html>
        ]]>
    </string>
    <string name="about_title">About</string>
    <string name="about_text"><![CDATA[
        <strong>Injectable Medicines Guide</strong><br/><br/>
        The Injectable Medicines Guide is an Android application, which was created by Aidan Wynne Fewster, for the NHS Wales under the Software Alliance Wales Scheme, as part of his dissertation at Aberystwyth University. The Injectable Medicines Guide aims to aid NHS staff in administering injectable medicines to patients, by providing portable access to a dataset of drug monographs.
        <br/><br/>
        <strong>External resources used</strong><br/><br/>
        <strong>GlyphIcons</strong> - http://glyphicons.com/<br/>
        <strong>RoboSpice</strong> - https://github.com/stephanenicolas/robospice
    ]]></string>
    <string name="close_button">Close</string>
</resources>
