<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_home"/>
    <item
        android:id="@+id/action_browse_drugs"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_browse_drugs"/>
    <item
        android:id="@+id/action_update"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_update"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
</menu>
