<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

  <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/login_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_message"
        android:layout_marginTop="5dp"
        android:text="@string/login_explain"
        android:textSize="14sp" />
    
    <EditText
        android:id="@+id/username_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_explain"
        android:layout_marginTop="15dp"
        android:inputType="textVisiblePassword"
        android:hint="@string/username_hint"
        android:nextFocusForward="@+id/password_input"/>

    <EditText
        android:id="@id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_input"
        android:layout_marginTop="5dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:nextFocusForward="@+id/login_button"/>
    
    <Button
        android:id="@+id/login_button"
        android:onClick="loginClick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_marginTop="18dp"
        android:text="@string/login_button_text" />

</RelativeLayout>