<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >
        <TextView
            android:id="@+id/drug_name_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/calculator_explain"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Calculation type"
            />
        <Spinner
            android:id="@+id/calculation_type_spinner"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/infusion_rate_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/infusion_rate"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:visibility="gone"
            android:hint="@string/enter_value"
            />
        <TextView
            android:id="@+id/dose_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/dose"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:visibility="gone"
            android:hint="@string/enter_value"
            android:nextFocusForward="@+id/concentration"
            />
        <TextView
            android:id="@+id/concentration_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@id/concentration"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:hint="@string/enter_value"
            android:nextFocusForward="@+id/patient_weight"
            />
        <TextView
            android:id="@+id/patient_weight_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/patient_weight_header"
            android:visibility="gone"
            />
        <EditText
            android:id="@id/patient_weight"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:visibility="gone"
            android:hint="@string/enter_value"
            android:nextFocusForward="@+id/calculate_button"
            />
        <TextView
            android:id="@+id/time_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/time_header"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/time"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:inputType="none"
            android:editable="false"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/time"
            android:hint="@string/enter_value"
            />
        <Button
            android:id="@id/calculate_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/calculate_button"
            android:onClick="calculateClick"
            />
    </LinearLayout>


</ScrollView>
