<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_blue"
        android:padding="10dp"
        >
        <TextView
            android:id = "@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/white"
            />

    <Button
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_below="@id/welcome_text_view"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/help_button"
        android:textColor="@color/white"
        android:onClick="viewDrugsClick"/>
    <Button
        android:id="@+id/view_drugs_button"
        android:layout_width="match_parent"
        android:layout_below="@id/help_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/view_drugs_button"
        android:textColor="@color/white"
        android:onClick="viewDrugsClick"/>
    <Button
        android:id="@+id/calculator_button"
        android:layout_width="match_parent"
        android:layout_below="@id/view_drugs_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/calculator_button"
        android:textColor="@color/white"
        android:onClick="calculatorClick"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/welcome_layout"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_blue"
        android:padding="10dp"
        >
        <TextView
            android:id = "@+id/last_update_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/update_drugs_button"
            android:layout_width="match_parent"
            android:layout_below="@id/last_update_textview"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/update_button"
            android:textColor="@color/white"
            android:onClick="updateClick"/>
    </RelativeLayout>
    </LinearLayout>
</ScrollView>
